--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <ul>
         <li>
-          <a href="./assets/curriculo.pdf" download target="_blank">Currículo</a>
+          <a href="https://google.com.br" download target="_blank">Currículo</a>
         </li>
 
         <li>
